# handover

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/lua/: handover_funcs.lua  handover_main.lua  handover_main_LTR.lua  handover_main_RTL.lua  handover_root_fsm.lua  handover_root_fsm_LTR.lua  handover_root_fsm_RTL.lua
app/script/: basic_modules.xml.template  handover.xml.template  handover.xml.template~  handover_LTR.xml.template  handover_RTL.xml  handover_RTL.xml.template
ext-conf/: acquisition_poses.txt  (+21 more)
in-hand-localization/: .gitignore  CMakeLists.txt
in-hand-localization/src/in-hand-segmentation/: CMakeLists.txt  idl.thrift  inHandSegmentation.cpp  main.cpp  pointCloudExtractor.cpp
in-hand-localization/src/kinematics-tactile-info/: CMakeLists.txt  idl.thrift  kinTact.cpp  main.cpp
in-hand-localization/src/localizer/: CMakeLists.txt  idl.thrift
in-hand-localization/src/localizer/headers/: localizer.h  unscentedParticleFilter.h
in-hand-localization/src/localizer/measurements/: campbell1133all_filters.off  domino-nocalibrated15_HF.off  domino-nocalibrated15_HF_GF_rgb_SF.off  jello-intensive-test_19_CF_HF_rgb_DF_EF.off  jello-intensive-test_hand_left_hand_19.off  spam-nocalibrated10_HF_GF_rgb_SF.off  spam1301_HF_GF_rgb.off  tactile_data_domino-nocalibrated_hand_left_hand_0.off  tactile_data_mustard-nocalibrated_hand_left_hand_0.off  tactile_data_spam-nocalibrated_hand_left_hand_0.off  tennis1233all_filters.off  test.off
in-hand-localization/src/localizer/models/: apple.off  potted-meat.off
in-hand-localization/src/localizer/outputs/: comparison-among-objects.off  outputMUPF_trial0_object0_m_value_0_N_0Q0.off  outputMUPF_trial0_object4_m_value_0_N_0Q0.off  outputMUPF_trial1_object0_m_value_0_N_0Q0.off  outputMUPF_trial2_object0_m_value_0_N_0Q0.off  outputMUPF_trial3_object0_m_value_0_N_0Q0.off  outputMUPF_trial4_object0_m_value_0_N_0Q0.off  outputStatisticsMUPF_object0_m_value_0_N_0Q0.off  outputStatisticsMUPF_object1_m_value_0_N_0Q0.off  outputStatisticsMUPF_object2_m_value_0_N_0Q0.off  outputStatisticsMUPF_object3_m_value_0_N_0Q0.off  outputStatisticsMUPF_object4_m_value_0_N_0Q0.off  test.off
in-hand-localization/src/localizer/src/: idl.thrift  localizer.cpp  main.cpp  scalingSeries.cpp  unscentedParticleFilter.cpp
in-hand-localization/src/pointcloud-filtering/: CMakeLists.txt  filter.cpp  idl.thrift  main.cpp
src/: CMakeLists.txt
src/closed-chain/: .gitignore  CMakeLists.txt
src/closed-chain/app/: CMakeLists.txt
src/closed-chain/app/conf/: doubleTouchDemo.ini  doubleTouchDemoSIM.ini  doubleTouchSIMsymmetricalHandConf.ini
src/closed-chain/doubleTouch/: CMakeLists.txt  iCubDblTchThrd.cpp  iCubDblTchThrd.h  iCubDoubleTouch.cpp  idl.thrift
src/closed-chain/lib/: CMakeLists.txt
src/closed-chain/lib/src/: iCubDblTchSlv.cpp  iCubDblTchSlv.cpp.autosave  iKinFwdMod.cpp  parzenWindowEstimator.cpp  skinPartPWE.cpp  taxelPWE.cpp  utils.cpp
src/grasping-pose-selection/: .gitignore  CMakeLists.txt
src/grasping-pose-selection/app/conf/: computed-poses-right.txt  config-left.ini  config-right.ini  config.ini  correction-matrices.txt  correction_matrices-left.txt  correction_matrices.txt  object-pose.txt  orientations-left.txt  orientations-right.txt  positions.off
src/grasping-pose-selection/app/script/: poseSelection.xml.template
src/grasping-pose-selection/models/: orientation-left-cyl.txt  orientations-left-cyl.txt  orientations-left.txt  orientations-left2.txt  orientations-left5.txt  orientations-right-cyl-16poses.txt  orientations-right-cyl.txt  orientations-right.txt  orientations-right0.txt  orientations-right4.txt  positions-chips.off  positions-cup.off  positions-cyl.off  positions-cylinder.off  positions-jello.off  positions-mustard.off  positions-soup.off  positions.off  positions3.off  positions_meat.off  sugar-dimensions.txt  sugar.off
src/grasping-pose-selection/src/: idl.thrift  main.cpp  main.cpp.autosave
src/in-hand-localization/: .gitignore
src/in-hand-localization/in-hand-segmentation/: CMakeCache.txt  CMakeLists.txt  inHandSegmentation.cpp  main.cpp
src/in-hand-localization/in-hand-segmentation/src/: idl.thrift  inHandSegmentation.cpp
src/in-hand-localization/localizer/: CMakeLists.txt
src/in-hand-localization/localizer/headers/: localizer.h  scalingSeries.h  unscentedParticleFilter.h
src/in-hand-localization/localizer/measurements/: campbell1132_HF_GF_rgb_SF.off  mustard-nocalibrated25_HF_GF_rgb_SF.off  pringles-nocalibrated0_HF_GF_rgb_SF.off  spam1302_HF_GF_rgb_SF.off  spam1303all_filters.off  tactile_data_pringles-nocalibrated_hand_left_hand_0.off  tennis1232_HF_GF_rgb_SF.off
src/in-hand-localization/localizer/models/: chips.off  chips.stl  cleanser.off  gelatin.off  gelatin.stl  mustard.off  mustard.stl  play_go.off  play_go.ply  sugar-aligned.off  sugar-aligned.stl  tennis.off  tomato-soup.off
src/in-hand-localization/localizer/outputs/: outputMUPF_trial0_object0_m_value_0_N_0Q0.off  outputMUPF_trial0_object0_m_value_0_N_0Q1.off  outputMUPF_trial0_object0_m_value_0_N_0Q2.off  outputMUPF_trial0_object0_m_value_0_N_0Q3.off  outputMUPF_trial0_object0_m_value_0_N_0Q4.off  outputMUPF_trial1_object0_m_value_0_N_0Q0.off  outputMUPF_trial1_object0_m_value_0_N_0Q1.off  outputMUPF_trial1_object0_m_value_0_N_0Q2.off  outputMUPF_trial1_object0_m_value_0_N_0Q3.off  outputMUPF_trial1_object0_m_value_0_N_0Q4.off  outputMUPF_trial2_object0_m_value_0_N_0Q0.off  outputMUPF_trial2_object0_m_value_0_N_0Q1.off  outputMUPF_trial2_object0_m_value_0_N_0Q2.off  outputMUPF_trial2_object0_m_value_0_N_0Q3.off  outputMUPF_trial2_object0_m_value_0_N_0Q4.off  outputMUPF_trial3_object0_m_value_0_N_0Q0.off  outputMUPF_trial3_object0_m_value_0_N_0Q1.off  outputMUPF_trial3_object0_m_value_0_N_0Q2.off  outputMUPF_trial3_object0_m_value_0_N_0Q3.off  outputMUPF_trial3_object0_m_value_0_N_0Q4.off  outputMUPF_trial4_object0_m_value_0_N_0Q0.off  outputMUPF_trial4_object0_m_value_0_N_0Q1.off  outputMUPF_trial4_object0_m_value_0_N_0Q2.off  outputMUPF_trial4_object0_m_value_0_N_0Q3.off  outputMUPF_trial4_object0_m_value_0_N_0Q4.off  (+10 more)
(+47 files in other folders)
