# Copyright: (C) 2016 iCub Facility - Istituto Italiano di Tecnologia
# Authors: Giulia Vezzani
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(closed-chain)
add_subdirectory(grasping-pose-selection)
add_subdirectory(in-hand-localization/in-hand-segmentation)
add_subdirectory(in-hand-localization/localizer)
