# Copyright: (C) 2013 RobotCub Consortium
# Author: Alessandro Roncone
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.8)
project(periPersonalSpace)

find_package(IPOPT REQUIRED)

include_directories(${YARP_INCLUDE_DIRS})
include_directories(${ICUB_INCLUDE_DIRS})
include_directories(${IPOPT_INCLUDE_DIRS})

set(folder_source src/iCubDblTchSlv.cpp
		          src/iKinFwdMod.cpp
                  src/utils.cpp
                  src/taxelPWE.cpp
                  src/skinPartPWE.cpp
                  src/parzenWindowEstimator.cpp)

set(folder_header include/iCub/periPersonalSpace/iCubDblTchSlv.h
                  include/iCub/periPersonalSpace/iKinFwdMod.h
                  include/iCub/periPersonalSpace/utils.h
                  include/iCub/periPersonalSpace/taxelPWE.h
                  include/iCub/periPersonalSpace/skinPartPWE.h
                  include/iCub/periPersonalSpace/parzenWindowEstimator.h)

include_directories(${PROJECT_SOURCE_DIR}/include)

source_group("Source Files" FILES ${folder_source})
source_group("Header Files" FILES ${folder_header})

add_definitions(${IPOPT_DEFINITIONS} -D_USE_MATH_DEFINES)
add_library(${PROJECT_NAME} ${folder_source} ${folder_header})
set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " ${IPOPT_LINK_FLAGS}")
target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES} iKin skinDynLib ${IPOPT_LIBRARIES})
icubcontrib_export_library(${PROJECT_NAME} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
                                           EXTERNAL_INCLUDE_DIRS ${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${IPOPT_INCLUDE_DIRS}
                                           DESTINATION include/iCub/${PROJECT_NAME}
                                           FILES ${folder_header})
# export library
export(TARGETS ${PROJECT_NAME} FILE ${CMAKE_BINARY_DIR}/periPersonalSpace-export-build.cmake)
set(EXPORT_INCLUDE_FILE periPersonalSpaceConfig.cmake)
file(WRITE  ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "# This file is automatically generated\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "###################\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "# List of include directories for exported targets\n\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "set(periPersonalSpace_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include CACHE STRING \"include dir for periPersonalSpace\")\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "include(\"${CMAKE_BINARY_DIR}/periPersonalSpace-export-build.cmake\")\n")
